--- a/tests/websockets/websockets.html
+++ b/tests/websockets/websockets.html
@@ -1,35 +1,34 @@
 <html>
-<head>
-    <title>Empty Page That Has Loaded WebSockets</title>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-    <script src="../../scripts/sockit.js"></script>
-    <script type="text/javascript" src="../../scripts/webSockets.js"></script>
+    <head>
+        <title>Empty Page That Has Loaded WebSockets</title>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
+        <script src="../../scripts/sockit.js"></script>
+        <script type="text/javascript" src="../../scripts/webSockets.js"></script>
 
-    <style>
+        <style>
 
-        #out {
-            padding: 5px;
-            width: 900px;
-            height: 500px;
-            margin: 0 auto;
-            background-color: #eeeeee;
-            overflow: auto;
-        }
+            #out {
+                padding: 5px;
+                width: 900px;
+                height: 500px;
+                margin: 0 auto;
+                background-color: #eeeeee;
+                overflow: auto;
+            }
 
-    </style>
+        </style>
 
-</head>
-<body>
-<center>
-    <h2>This is an empty page that has loaded SockIt WebSockets</h2>
-</center>
+    </head>
+    <body>
+        <center>
+            <h2>This is an empty page that has loaded SockIt WebSockets</h2>
+        </center>
 
-<script type="text/javascript">
+        <script type="text/javascript">
 
-    loadSockitPlugin();
+            var sockit = loadSockitPlugin();
 
-</script>
+        </script>
 
-
-</body>
+    </body>
 </html> 
