Changed build script to build release

--- a/bin/linux/chrome/sockit.html
+++ b/bin/linux/chrome/sockit.html
@@ -1,5 +1,5 @@
 <center>
-    <div style="padding:50px">
+    <div style="padding:50px; width: 150px;">
         <h4>SockIt</h4>
         <br/>
         An NPAPI browser plugin to perform asynchronous networking using client-side javascript.
