Changed all tests to use only scripts

--- a/tests/big_test/big_test.html
+++ b/tests/big_test/big_test.html
@@ -2,7 +2,7 @@
 <head> 
     <title>Big Test</title> 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-    <script src="../../scripts/sockit.js"></script>
+    <script src="http://sockit.github.com/scripts/sockit.js"></script>
     <script src="../../scripts/common.js"></script>
 
 	<style>
