--- a/tests/basic_udp/udp_server.html
+++ b/tests/basic_udp/udp_server.html
@@ -2,7 +2,7 @@
 <head> 
     <title>Udp server</title> 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-    <script src="../../scripts/sockit.js"></script>
+    <script src="http://sockit.github.com/scripts/sockit.js"></script>
     <script src="../../scripts/common.js"></script>
 
 	<style>
