--- a/tests/websockets/websockets.html
+++ b/tests/websockets/websockets.html
@@ -2,8 +2,8 @@
     <head>
         <title>Empty Page That Has Loaded WebSockets</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-        <script src="../../scripts/sockit.js"></script>
-        <script type="text/javascript" src="../../scripts/webSockets.js"></script>
+        <script src="http://sockit.github.com/scripts/sockit.js"></script>
+        <script src="http://sockit.github.com/scripts/webSockets.js"></script>
 
         <style>
 
